--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@ body {
     background-color: #f0f0f0; /* Very light grey */
 }
 
-/* Style for all paragraphs */
+
 p {
-    color: lightblue;
-    font-size: 16px;
-    font-family: 'Times New Roman', serif;
+    color: rgb(135,206,253);
 }
 
 /* Style for the main heading */
