--- a/style.css
+++ b/style.css
@@ -21,3 +21,6 @@ h1 {
     text-align: center; /* Puts the heading in the middle */
     border: 2px solid blue; /* Adds an orange border around the heading */
     padding: 10px; /* Adds space inside the border */
+
+    a {
+        text decoration;none }
